--- a/buat.html
+++ b/buat.html
@@ -1,1 +1,1 @@
-tambah isi edit dari portal tesl lagi update lagi comit ke serve nbg okelagi
+tambah isi edit dari portal tesl lagi update lagi comit ke serve nbg okelagi ghvhjgvfjhvjkh
